fix layout issue in contact section

--- a/style.css
+++ b/style.css
@@ -1320,7 +1320,7 @@ footer {
 
 .footer-background {
     width: 100%;
-    height: 100vh;
+    min-height: calc(100vh + 80px);
     background-color: #0b0b0b;
     display: flex;
     align-items: flex-end;
@@ -1341,7 +1341,7 @@ footer {
     position: absolute;
     top: 0;
     width: 100%;
-    height: 100vh;
+    min-height: calc(100vh + 80px);
     display: flex;
     align-items: flex-end;
     justify-content: center;
@@ -1367,13 +1367,13 @@ footer {
 
 .getintouch-heading,
 .logos {
-    height: 80px;
+    height: 120px;
     width: 100%;
     display: flex
 }
 
 .contact-tagline article {
-    font-size: 3rem
+    font-size: 2rem
 }
 
 .social-media-container {
@@ -1401,7 +1401,8 @@ footer {
 
 .getintouch-heading {
     align-items: center;
-    justify-content: center
+    justify-content: center;
+    margin-top: 40px
 }
 
 .getintouch-heading article {
